# snapsoft-homework

./: .gitignore  AGENTS.md  README.md  homework.md  main.py  ml_sample_data_snapsoft.csv  pyproject.toml  tasks.md
.cursor/rules/: get-docs.mdc
docs/: adr.md  dataset-profile.md  task3-notes.md  task4-notes.md  task5-notes.md  task6-notes.md  task7-notes.md  task8-notes.md
notebook/: exploration.ipynb  training.ipynb
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/lambda/: preprocess.py
