[project]
name = "snapsoft-homework"
version = "0.1.0"
description = "SnapSoft AI&ML Homework — AWS preprocessing pipeline + ML model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
]
